test/types/coerce/ferguson/no-coerce.good
no-coerce.chpl:28: error: type mismatch in assignment from R to int(64)
